Fix contrast ratios

--- a/stories/page.css
+++ b/stories/page.css
@@ -23,7 +23,7 @@ section p {
 
 section a {
   text-decoration: none;
-  color: #1ea7fd;
+  color: #167bba;
 }
 
 section ul {
@@ -42,7 +42,7 @@ section .tip {
   line-height: 12px;
   font-weight: 700;
   background: #e7fdd8;
-  color: #66bf3c;
+  color: #437d27;
   padding: 4px 12px;
   margin-right: 10px;
   vertical-align: top;
